--- a/carp.html
+++ b/carp.html
@@ -22,31 +22,31 @@
                 <h1 class="bigBold">Lynn's Posters</h1>
             </a>
         </div>
-            <div class="push">
-                <ul>
-                    <div class="contents-area-carp push">
-                        <a class="menu" href="index.html" target="blank">
-                            <li>Home</li>
-                        </a>
-                        <div class="content-gap1"></div>
-                        <a class="menu" href="typography.html" target="blank">
-                            <li>Typography</button></li>
-                        </a>
-                        <div class="content-gap2"></div>
-                        <a class="menu" href="carp.html" target="blank">
-                            <li>CARP</li>
-                        </a>
-                        <div class="content-gap1"></div>
-                        <a class="menu" href="coding.html" target="blank">
-                            <li>Coding</li>
-                        </a>
-                        <div class="content-gap1"></div>
-                        <a class="menu" href="reflection.html" target="blank">
-                            <li>Reflection</li>
-                        </a>
-                    </div>
-                </ul>
-            </div>
+        <div class="push">
+            <ul>
+                <div class="contents-area-carp push">
+                    <a class="menu" href="index.html" target="blank">
+                        <li>Home</li>
+                    </a>
+                    <div class="content-gap1"></div>
+                    <a class="menu" href="typography.html" target="blank">
+                        <li>Typography</button></li>
+                    </a>
+                    <div class="content-gap2"></div>
+                    <a class="menu" href="carp.html" target="blank">
+                        <li>CARP</li>
+                    </a>
+                    <div class="content-gap1"></div>
+                    <a class="menu" href="coding.html" target="blank">
+                        <li>Coding</li>
+                    </a>
+                    <div class="content-gap1"></div>
+                    <a class="menu" href="reflection.html" target="blank">
+                        <li>Reflection</li>
+                    </a>
+                </div>
+            </ul>
+        </div>
     </header>
 </body>
 
@@ -59,7 +59,9 @@
         <img src="CARP POSTER 1.jpg" class="typo-imgs">
         <section class="sec-top"></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">For this poster I wanted to try and keep a certain level of minimalism. For this reason I tried to keep a Monocromatic colourscheme with the addition of some Red accents which I think really pulls the design together. Overall I foud this poster fun to make but it took me a moment to get the ball rolling. 
+        <p class="typo-para">For this poster I wanted to try and keep a certain level of minimalism. For this reason I
+            tried to keep a Monocromatic colourscheme with the addition of some Red accents which I think really pulls
+            the design together. Overall I foud this poster fun to make but it took me a moment to get the ball rolling.
         <p>
     </div>
     </div>
@@ -74,7 +76,9 @@
         <img src="CARP POSTER 2.jpg" class="typo-imgs">
         <section class="sec-top"></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">For this poster I took heavy inspiration from the pieces of De Stijl artist Piet Mondian. I have enjoyed his pieces and Theo van Doesburg's since the beginning of A levels and because of this they have become some of my favourite Modernists. 
+        <p class="typo-para">For this poster I took heavy inspiration from the pieces of De Stijl artist Piet Mondian. I
+            have enjoyed his pieces and Theo van Doesburg's since the beginning of A levels and because of this they
+            have become some of my favourite Modernists.
         <p>
     </div>
     </div>
@@ -89,7 +93,9 @@
         <img src="CARP POSTER 3.png" class="typo-imgs">
         <section class="sec-top"></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Finally, for my third poster I wanted try and capture an old feel. I took inspiration from early hot air balloons. I chose to used again a quite Monocromatic colourscheme and again used a red as an accent. 
+        <p class="typo-para">Finally, for my third poster I wanted try and capture an old feel. I took inspiration from
+            early hot air balloons. I chose to used again a quite Monocromatic colourscheme and again used a red as an
+            accent.
         <p>
     </div>
     </div>
@@ -101,7 +107,9 @@
 
 <footer>
     <p class="footer-msg"> &hearts; This Website was brought to you by lynn &hearts;</p>
-    <a href="index.html" target="_blank"><p class="footer-home">Home</p></a>
+    <a href="index.html" target="_blank">
+        <p class="footer-home">Home</p>
+    </a>
     <ul>
         <div class="social-media footer-containter">
             <a href="https://www.instagram.com/tomefan2002/" target="_blank">
