--- a/reflection.html
+++ b/reflection.html
@@ -19,34 +19,34 @@
     <header>
         <div>
             <a href="index.html" target="_blank">
-            <h1 class="bigBold">Lynn's Reflection</h1>
+                <h1 class="bigBold">Lynn's Reflection</h1>
             </a>
         </div>
-            <div class="push">
-                <ul>
-                    <div class="contents-area-reflection push">
-                        <a class="menu" href="index.html" target="blank">
-                            <li>Home</li>
-                        </a>
-                        <div class="content-gap1"></div>
-                        <a class="menu" href="typography.html" target="blank">
-                            <li>Typography</button></li>
-                        </a>
-                        <div class="content-gap2"></div>
-                        <a class="menu" href="carp.html" target="blank">
-                            <li>CARP</li>
-                        </a>
-                        <div class="content-gap1"></div>
-                        <a class="menu" href="coding.html" target="blank">
-                            <li>Coding</li>
-                        </a>
-                        <div class="content-gap1"></div>
-                        <a class="menu" href="reflection.html" target="blank">
-                            <li>Reflection</li>
-                        </a>
-                    </div>
-                </ul>
-            </div>
+        <div class="push">
+            <ul>
+                <div class="contents-area-reflection push">
+                    <a class="menu" href="index.html" target="blank">
+                        <li>Home</li>
+                    </a>
+                    <div class="content-gap1"></div>
+                    <a class="menu" href="typography.html" target="blank">
+                        <li>Typography</button></li>
+                    </a>
+                    <div class="content-gap2"></div>
+                    <a class="menu" href="carp.html" target="blank">
+                        <li>CARP</li>
+                    </a>
+                    <div class="content-gap1"></div>
+                    <a class="menu" href="coding.html" target="blank">
+                        <li>Coding</li>
+                    </a>
+                    <div class="content-gap1"></div>
+                    <a class="menu" href="reflection.html" target="blank">
+                        <li>Reflection</li>
+                    </a>
+                </div>
+            </ul>
+        </div>
     </header>
 </body>
 
@@ -61,9 +61,26 @@
         <div class="main-box-reflection"></div>
         <div class="about-me-area">
             <p class="about-me">Reflection</p>
-            <p class="reflection-para">Whilst creating this project I have encountered many issues, successes and frustrations. This being my first large project I have ever coded I believe it to be only natural that I encountered issues. I have found that by persevering, researching and seeking aid I think I have been able to create a final product that not only works, but one that I have found great enjoyment creating, learning about and applying various problem solving skills to fix. Some examples of this: Responsitivity, at first I found I had a lot of trouble getting this site to act responsivly with screens of different sizes and as a result it haltered my progress until I could understand what I was doing wrong (That being an excessive use of Padding rather than using tools available to me to move my Contents Areas). In addition to issues with Responsitivity, I found understanding all the different functions within HTML, CSS and Flexbox quite the daunting task and at first it took me a decent while to get the ball rolling.</p>
-           
-            <p class="reflection-para">Despite the issues I encountered I think I learned a lot about how to create a basic website, how to problem solve in topics that are completley alien to me, and how to experimentaly see what each function does to see what works and what doesn't. If I was to change anything about this website I think 100% it would have been to take a step back and fully understand Flexbox before going Gung Ho and jumping straight into creating this site - it would have saved me hours in the long run and many frustrations when it comes fixing issues with Responsitivity. If I had to summarise my journey in just a few words I'd describe it as frustrating, but very very rewarding once I managed to get everything working how I wanted.</p>
+            <p class="reflection-para">Whilst creating this project I have encountered many issues, successes and
+                frustrations. This being my first large project I have ever coded I believe it to be only natural that I
+                encountered issues. I have found that by persevering, researching and seeking aid I think I have been
+                able to create a final product that not only works, but one that I have found great enjoyment creating,
+                learning about and applying various problem solving skills to fix. Some examples of this:
+                Responsitivity, at first I found I had a lot of trouble getting this site to act responsivly with
+                screens of different sizes and as a result it haltered my progress until I could understand what I was
+                doing wrong (That being an excessive use of Padding rather than using tools available to me to move my
+                Contents Areas). In addition to issues with Responsitivity, I found understanding all the different
+                functions within HTML, CSS and Flexbox quite the daunting task and at first it took me a decent while to
+                get the ball rolling.</p>
+
+            <p class="reflection-para">Despite the issues I encountered I think I learned a lot about how to create a
+                basic website, how to problem solve in topics that are completley alien to me, and how to experimentaly
+                see what each function does to see what works and what doesn't. If I was to change anything about this
+                website I think 100% it would have been to take a step back and fully understand Flexbox before going
+                Gung Ho and jumping straight into creating this site - it would have saved me hours in the long run and
+                many frustrations when it comes fixing issues with Responsitivity. If I had to summarise my journey in
+                just a few words I'd describe it as frustrating, but very very rewarding once I managed to get
+                everything working how I wanted.</p>
         </div>
     </div>
 </main>
@@ -74,7 +91,9 @@
 
 <footer>
     <p class="footer-msg"> &hearts; This Website was brought to you by lynn &hearts;</p>
-    <a href="index.html" target="_blank"><p class="footer-home">Home</p></a>
+    <a href="index.html" target="_blank">
+        <p class="footer-home">Home</p>
+    </a>
     <ul>
         <div class="social-media footer-containter">
             <a href="https://www.instagram.com/tomefan2002/" target="_blank">
@@ -86,7 +105,7 @@
             <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank">
                 <li class="social-media">Snapchat</li>
             </a>
-                <li class="social-media">thomaslynn.2002@outlook.com</li>
+            <li class="social-media">thomaslynn.2002@outlook.com</li>
         </div>
     </ul>
 
