--- a/coding.html
+++ b/coding.html
@@ -59,11 +59,11 @@
         <img src="First Coding assignment.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Humble beginnings, my first time learnng to code in HTML5. Of course, this is about as
-            basic as a website can come just some arbitrary text on a white background. <a
-                href="https://github.com/tomefan2002/lynnrepo1/tree/main/GWDS%20week%201"
-                target="_blank">https://github.com/tomefan2002/lynnrepo1/tree/main/GWDS%20week%201</a>
-        </p>
+        <a href="https://github.com/tomefan2002/lynnrepo1/tree/main/GWDS%20week%201" target="_blank">
+            <p class="typo-para">Humble beginnings, my first time learnng to code in HTML5. Of course, this is about as
+                basic as a website can come just some arbitrary text on a white background.</p>
+        </a>
+
     </div>
 </main>
 
@@ -107,12 +107,11 @@
         <img src="Second Coding Assignment3.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Also during this task I learnt to create hyperlinks within HTML and how to style said
-            hyperlinks with CSS. I found this task was very useful and an easy step up from the previous. It taught me
-            to basics of creating a half-decent looking webpage. <a
-                href="https://github.com/tomefan2002/lynnrepo2/blob/main/index.html"
-                target="_blank">https://github.com/tomefan2002/lynnrepo2/blob/main/index.html</a>
-        </p>
+        <a href="https://github.com/tomefan2002/lynnrepo2/blob/main/index.html" target="_blank">
+            <p class="typo-para">Also during this task I learnt to create hyperlinks within HTML and how to style said
+                hyperlinks with CSS. I found this task was very useful and an easy step up from the previous. It taught
+                me to basics of creating a half-decent looking webpage.</p>
+        </a>
     </div>
 </main>
 
@@ -140,10 +139,11 @@
         <img src="Second Coding Assignment5.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Finally, for this task I created a basic footer that provided a short conclusion of the
-            task. <a
-                href="https://github.com/tomefan2002/lynnrepo2/blob/main/cake.html">https://github.com/tomefan2002/lynnrepo2/blob/main/cake.html</a>
-        </p>
+        <a href="https://github.com/tomefan2002/lynnrepo2/blob/main/cake.html">
+            <p class="typo-para">Finally, for this task I created a basic footer that provided a short conclusion of the
+                task.</p>
+        </a>
+
     </div>
 </main>
 
@@ -156,11 +156,13 @@
         <img src="Third Coding Assignment.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Advancing quickly, during this task I further learnt more about HTML & CSS. This was the
-            first time I made use of buttons with HTML and used them to act as anchor links within the page - one of the
-            buttons acting as a hyperlink. <a href="https://github.com/tomefan2002/lynnrepo3/blob/main/index.html"
-                target="_blank">https://github.com/tomefan2002/lynnrepo3/blob/main/index.html</a>
-        </p>
+        <a href="https://github.com/tomefan2002/lynnrepo3/blob/main/index.html" target="_blank">
+            <p class="typo-para">Advancing quickly, during this task I further learnt more about HTML & CSS. This was
+                thefirst time I made use of buttons with HTML and used them to act as anchor links within the page - one
+                of the
+                buttons acting as a hyperlink.</p>
+        </a>
+
     </div>
 </main>
 
@@ -217,10 +219,11 @@
         <img src="Third Coding Assignment5 (secondpage).png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">This was some more practice for linking different webpages within the same project using
-            hyperlinks within a button. <a href="https://github.com/tomefan2002/lynnrepo3/blob/main/button.html"
-                target="_blank">https://github.com/tomefan2002/lynnrepo3/blob/main/button.html</a>
-        </p>
+        <a href="https://github.com/tomefan2002/lynnrepo3/blob/main/button.html" target="_blank">
+            <p class="typo-para">This was some more practice for linking different webpages within the same project
+                using hyperlinks within a button.</p>
+        </a>
+
     </div>
 </main>
 
@@ -248,11 +251,10 @@
         <img src="Carousel Slider.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">I added the code to create a feature that allowed for multiple images to be displayed each
-            time you press a different number/move the slider left & right. <a
-                href="https://github.com/tomefan2002/lynnrepo3/blob/main/slider.html"
-                target="_blank">https://github.com/tomefan2002/lynnrepo3/blob/main/slider.html</a>
-        </p>
+        <a href="https://github.com/tomefan2002/lynnrepo3/blob/main/slider.html" target="_blank">
+            <p class="typo-para">I added the code to create a feature that allowed for multiple images to be displayed
+                each time you press a different number/move the slider left & right.</p>
+        </a>
     </div>
 </main>
 
