adding sketchs n shit

--- a/reflection.html
+++ b/reflection.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
+    <script src="p5.js"></script>
     <title>Lynn's Reflection</title>
 
 </head>
@@ -48,7 +49,7 @@
             </ul>
         </div>
     </header>
-</body>
+
 
 <section>
 
@@ -56,7 +57,8 @@
 
 <main>
     <div class="welcome">
-        <img class="home-img" src="https://placekitten.com/600/600">
+        <div id="canvasContainer1"></div>
+        <!-- <img class="home-img" src="https://placekitten.com/600/600"> -->
         <section class="sec-top"></section>
         <div class="main-box-reflection"></div>
         <div class="about-me-area">
@@ -110,3 +112,5 @@
     </ul>
 
 </footer>
+<script src="sketch1.js"></script>
+</body>
