--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
+    <script src="p5.js"></script>
     <title>Lynn's Portfolio</title>
 
 </head>
@@ -48,7 +49,7 @@
             </ul>
         </div>
     </header>
-</body>
+
 
 <section>
 
@@ -56,7 +57,8 @@
 
 <main>
     <div class="welcome">
-        <img class="home-img" src="https://placekitten.com/600/600">
+        <div id="canvasContainer"></div>
+        <!-- <img class="home-img" src="https://placekitten.com/600/600"> -->
         <section class="sec-top"></section>
         <div class="main-box-home"></div>
         <div class="about-me-area">
@@ -93,5 +95,6 @@
             <li class="social-media">thomaslynn.2002@outlook.com</li>
         </div>
     </ul>
-
 </footer>
+<script src="sketch.js"></script>
+</body>
