--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <script src="p5.js"></script>
+    <script src="p5.sound.js"></script>
     <title>Lynn's Portfolio</title>
 
 </head>
@@ -51,50 +52,51 @@
     </header>
 
 
-<section>
+    <section>
 
-</section>
+    </section>
 
-<main>
-    <div class="welcome">
-        <div id="canvasContainer"></div>
-        <!-- <img class="home-img" src="https://placekitten.com/600/600"> -->
-        <section class="sec-top"></section>
-        <div class="main-box-home"></div>
-        <div class="about-me-area">
-            <p class="about-me">About Me</p>
-            <p class="main-para-home">Hi, My name is Thomas Lynn, the creator of this website. I am currently a Student
-                at UWE studying Digital Media. I grew up in South Wales my entire life and moved to Bristol at 18 to
-                begin my University career. I'm really into music and exploring new genres and artists (check the
-                spotify), I love finding good design - my favourite movement is probably Modernism, artists Piet
-                Mondrian and Theo Van Doesberg are my current favourites.</p>
+    <main>
+        <div class="welcome">
+            <div id="canvasContainer"></div>
+            <!-- <img class="home-img" src="https://placekitten.com/600/600"> -->
+            <section class="sec-top"></section>
+            <div class="main-box-home"></div>
+            <div class="about-me-area">
+                <p class="about-me">About Me</p>
+                <p class="main-para-home">Hi, My name is Thomas Lynn, the creator of this website. I am currently a
+                    Student
+                    at UWE studying Digital Media. I grew up in South Wales my entire life and moved to Bristol at 18 to
+                    begin my University career. I'm really into music and exploring new genres and artists (check the
+                    spotify), I love finding good design - my favourite movement is probably Modernism, artists Piet
+                    Mondrian and Theo Van Doesberg are my current favourites.</p>
+            </div>
         </div>
-    </div>
-</main>
+    </main>
 
-<section>
+    <section>
 
-</section>
+    </section>
 
-<footer>
-    <p class="footer-msg"> &hearts; This Website was brought to you by lynn &hearts;</p>
-    <a href="index.html" target="_blank">
-        <p class="footer-home">Home</p>
-    </a>
-    <ul>
-        <div class="social-media footer-containter">
-            <a href="https://www.instagram.com/tomefan2002/" target="_blank">
-                <li class="social-media">Instagram</li>
-            </a>
-            <a href="https://open.spotify.com/user/qhbkzqphspihd56j9t3dojs7a?si=7af88a4cee624532" target="_blank">
-                <li class="social-media">Spotify</li>
-            </a>
-            <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank">
-                <li class="social-media">Snapchat</li>
-            </a>
-            <li class="social-media">thomaslynn.2002@outlook.com</li>
-        </div>
-    </ul>
-</footer>
-<script src="sketch.js"></script>
+    <footer>
+        <p class="footer-msg"> &hearts; This Website was brought to you by lynn &hearts;</p>
+        <a href="index.html" target="_blank">
+            <p class="footer-home">Home</p>
+        </a>
+        <ul>
+            <div class="social-media footer-containter">
+                <a href="https://www.instagram.com/tomefan2002/" target="_blank">
+                    <li class="social-media">Instagram</li>
+                </a>
+                <a href="https://open.spotify.com/user/qhbkzqphspihd56j9t3dojs7a?si=7af88a4cee624532" target="_blank">
+                    <li class="social-media">Spotify</li>
+                </a>
+                <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank">
+                    <li class="social-media">Snapchat</li>
+                </a>
+                <li class="social-media">thomaslynn.2002@outlook.com</li>
+            </div>
+        </ul>
+    </footer>
+    <script src="sketch.js"></script>
 </body>
