--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
             <div class="main-box-home"></div>
             <div class="about-me-area">
                 <p class="about-me">About Me</p>
-                <p class="main-para-home">Hi, My name is Thomas Lynn, the creator of this website. I am currently a
-                    Student
+                <p class="main-para-home">Hi, My name is Thomas Lynn, the creator of this website. I am currently a Student
                     at UWE studying Digital Media. I grew up in South Wales my entire life and moved to Bristol at 18 to
-                    begin my University career. I'm really into music and exploring new genres and artists (check the
-                    spotify), I love finding good design - my favourite movement is probably Modernism, artists Piet
-                    Mondrian and Theo Van Doesberg are my current favourites.</p>
+                    begin my University career. I love music and exploring new genres and artists, I listen to it as
+                    much as I'm able - from heavy metal to hiphop, soft rock to jazz (check the spotify). I love finding
+                    good and weird design, my passion for design began at GCSE when I first began studying it in Product Design - my
+                    favourite movement is probably Modernism, artists Piet Mondrian and Theo Van Doesberg are my current
+                    favourites. </p>
             </div>
         </div>
     </main>
